# marketing-agent-fuviai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  ruff.toml  run.py  test.http  vercel.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_customers_and_email.py
backend/: __init__.py  monitoring.py
backend/agents/: __init__.py  adbudget_agent.py  base_agent.py  campaign_agent.py  competitor_agent.py  compliance_agent.py  content_agent.py  insight_agent.py  listening_agent.py  livestream_agent.py  orchestrator.py  personalize_agent.py  research_agent.py  seo_agent.py  social_agent.py
backend/api/: main.py  middleware.py
backend/config/: prompts_vn.py  settings.py
backend/db/: database.py  models.py  repository.py
backend/memory/: conversation.py  vector_store.py
backend/tasks/: __init__.py  celery_app.py  competitor_tasks.py  email_tasks.py  listening_tasks.py
backend/tools/: email_tool.py  facebook_ads_tool.py  facebook_tool.py  google_ads_tool.py  instagram_tool.py  scraper_tool.py  search_tool.py  (+4 more)
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nginx/: nginx.conf
scripts/: seed_knowledge.py
tests/: test_agents_phase2.py  test_agents_phase3_4.py  test_api.py  test_api_full.py  test_content_agent.py  test_customers_api.py
(+46 files in other folders)
