[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fuviai-marketing-agent"
version = "1.0.0"
description = "AI Marketing Agent cho doanh nghiệp Việt Nam"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E711", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers -p no:warnings"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (mock Claude API)",
    "e2e: End-to-end tests (requires real API key)",
    "slow: Slow tests (> 5s)",
]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "backend/tasks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
